HelloUltraviolet/Fixtures/RejectedSource/Parallelism/DispatchInferFailure/Expected.uv
//! Expected diagnostic metadata for the DispatchInferFailure rejected-source specimen.

expectedDiagnostic("E-CON-0141", "rule.20.Dispatch-Infer-Err")
